--- a/ip/altpll_50_10.cmp
+++ b/ip/altpll_50_10.cmp
@@ -19,6 +19,6 @@ component altpll_50_10
 	(
 		inclk0		: IN STD_LOGIC  := '0';
 		c0		: OUT STD_LOGIC ;
-		locked		: OUT STD_LOGIC 
+		c1		: OUT STD_LOGIC 
 	);
 end component;
